--- a/back-end/public/index.html
+++ b/back-end/public/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="//unpkg.com/feathers-chat@4.0.0/public/chat.css">
   </head>
   <body>
-    <div id="app" class="flex flex-column"></div>
+    <div id="app" class="flex flex-column">
+      <a href="/oauth/github">Login with GitHub</a>
+    </div>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.js"></script>
     <script src="//unpkg.com/@feathersjs/client@^4.3.0/dist/feathers.js"></script>
     <script src="/socket.io/socket.io.js"></script>
