--- a/back-end/public/index.html
+++ b/back-end/public/index.html
@@ -3,18 +3,16 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0" />
-    <title>Middagsdeling:</title>
+    <title>FeathersJS chat</title>
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="//unpkg.com/feathers-chat@4.0.0/public/base.css">
     <link rel="stylesheet" href="//unpkg.com/feathers-chat@4.0.0/public/chat.css">
   </head>
   <body>
-    <div id="app" class="flex flex-column">
-      <a href="/oauth/github">Login with GitHub</a>
-    </div>
+    <div id="app" class="flex flex-column"></div>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.js"></script>
     <script src="//unpkg.com/@feathersjs/client@^4.3.0/dist/feathers.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="app.js"></script>
+    <script src="client.js" type="module"></script>
   </body>
 </html>
